[package]
name = "niebla-158"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Compact block filters (BIP158) + light client plumbing (BIP157) for Bitcoin wallets"
repository = "https://github.com/deadkennedyx/niebla-158"
readme = "README.MD"
keywords = ["bitcoin", "bip157", "bip158", "light-client", "wallet"]

[lib]
name = "niebla_158"
path = "src/lib.rs"

# No [features] section anymore — everything is always on.

[dependencies]
anyhow       = "1"
async-trait  = "0.1"
bitcoin      = "0.32"
hex          = "0.4"
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile     = "3"
